test(behavior-pattern-detector): add comprehensive unit tests
- Add tests for BehaviorPatternDetector constructor null check
- Verify GetBehaviorPatternsAsync returns ordered patterns by count
- Test GetBehaviorPatternsAsync returns empty when no records
- Validate GetPatternAnomaliesAsync returns empty when no records
- Test GetPatternAnomaliesAsync returns anomalies when threshold met
- Add tests for MatchTemplates with matching and non-matching cases
- Implement FakeIntentHistoryRepository for test support

test(observable-intent-model): add unit tests for inference behavior

- Test constructor throws on null inner model
- Verify Infer returns expected Intent from inner model
- Confirm exceptions from inner model propagate correctly
- Test Infer with empty BehaviorSpace calls inner correctly
- Verify Infer passes precomputed vector to inner model

test(onnx-intent-model): add constructor validation tests

- Verify constructor throws when IntentLabels list is empty
- Add TempFile helper for creating disposable temp files for tests

test(persistence): add serialization and NoOpAuditStore tests

- Test NoOpIntentAuditStore completes AppendAsync without errors
- Verify BehaviorSpaceDocument round-trip serialization preserves data
- Test BehaviorSpaceDocument handles empty and invalid MetadataJson
- Verify BehaviorEventDocument round-trip serialization preserves data
- Test IntentHistoryDocument round-trip serialization and empty metadata handling

test(policy-execution-observability): add exception handling test

- Verify DecideWithExecutionLog returns Observe decision when policy throws
- Confirm exception details are recorded in audit log during failure

test(tenant-aware-behavior-space-repository): add multitenancy tests

- Add tests for GetByMetadataAsync filtering by current tenant
- Verify behavior when tenant is null delegates to inner repository
- Test GetByTimeWindowAsync filters results by tenant correctly
- Verify deletion returns true when tenant owns spa

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
             /o:"${{ env.SONAR_ORGANIZATION }}" \
             /d:sonar.token="$SONAR_TOKEN" \
             /d:sonar.host.url="https://sonarcloud.io" \
-            /d:sonar.cs.opencover.reportsPaths="${{ github.workspace }}/TestResults/coverage.opencover.xml" \
+            /d:sonar.cs.opencover.reportsPaths=TestResults/coverage.opencover.xml \
             /d:sonar.exclusions="**/samples/**,**/examples/**,**/docs/**,**/templates/**,**/tools/**,**/.github/**,**/tests/**,**/benchmarks/**,**/BenchmarkDotNet.Artifacts/**,**/scripts/**,**/release.sh" \
             /d:sonar.coverage.exclusions="**/Intentum.CodeGen/**,**/*ServiceCollectionExtensions.cs,**/*CachingExtensions.cs,**/MultiTenancyExtensions.cs,**/Intentum.AI.Claude/**,**/Intentum.Persistence.MongoDB/**,**/Intentum.Persistence.Redis/**,**/Intentum.MultiTenancy/**,**/*RateLimitException.cs,**/LlmIntentModelExtensions.cs,**/Intentum.AI.ONNX/**,**/Intentum.Persistence/**,**/Intentum.Observability/**,**/Intentum.Analytics/**"
           # Exclusions duplicated here on purpose so CI is stable. Keep in sync with .sonarcloud.properties when changing.
@@ -66,7 +66,7 @@ jobs:
           mkdir -p TestResults
           dotnet build tests/Intentum.Tests/Intentum.Tests.csproj --no-restore \
             -p:CollectCoverage=true \
-            -p:CoverletOutput=../../TestResults/coverage \
+            -p:CoverletOutput="${{ github.workspace }}/TestResults" \
             -p:CoverletOutputFormat=opencover
 
       - name: Test
@@ -74,6 +74,10 @@ jobs:
           dotnet test tests/Intentum.Tests/Intentum.Tests.csproj --no-build \
             --filter 'FullyQualifiedName!~GreenwashingCaseStudyTests&FullyQualifiedName!~IntegrationTests' \
             --results-directory TestResults
+          if [ ! -f TestResults/coverage.opencover.xml ]; then
+            found=$(find TestResults -name 'coverage.opencover.xml' -print -quit 2>/dev/null)
+            if [ -n "$found" ]; then cp "$found" TestResults/coverage.opencover.xml; fi
+          fi
           test -f TestResults/coverage.opencover.xml && echo "Coverage file: $(wc -l < TestResults/coverage.opencover.xml) lines" || (echo "::error::coverage.opencover.xml not found"; exit 1)
 
       - name: SonarCloud end
