--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
             /o:"${{ env.SONAR_ORGANIZATION }}" \
             /d:sonar.token="$SONAR_TOKEN" \
             /d:sonar.host.url="https://sonarcloud.io" \
-            /d:sonar.cs.opencover.reportsPaths=TestResults/coverage.opencover.xml \
+            /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml" \
             /d:sonar.exclusions="**/samples/**,**/examples/**,**/docs/**,**/templates/**,**/tools/**,**/.github/**,**/tests/**,**/benchmarks/**,**/BenchmarkDotNet.Artifacts/**,**/scripts/**,**/release.sh" \
             /d:sonar.coverage.exclusions="**/Intentum.CodeGen/**,**/*ServiceCollectionExtensions.cs,**/*CachingExtensions.cs,**/MultiTenancyExtensions.cs,**/Intentum.AI.Claude/**,**/Intentum.Persistence.MongoDB/**,**/Intentum.Persistence.Redis/**,**/Intentum.MultiTenancy/**,**/*RateLimitException.cs,**/LlmIntentModelExtensions.cs,**/Intentum.AI.ONNX/**,**/Intentum.Persistence/**,**/Intentum.Observability/**,**/Intentum.Analytics/**"
           # Exclusions duplicated here on purpose so CI is stable. Keep in sync with .sonarcloud.properties when changing.
@@ -59,28 +59,33 @@ jobs:
       - name: Build
         run: dotnet build Intentum.slnx --no-restore
 
-      # Coverage: coverlet.msbuild instruments at *build* time and applies ExcludeByFile. Build test project with CollectCoverage so exclusion/threshold apply; then run tests with --no-build.
+      # Coverage: produced during test run so SonarCloud can associate it with source. Coverlet instruments on build (done by dotnet test) and writes report after tests.
       # Threshold=80; ONNX/Persistence/MultiTenancy/Observability/Analytics excluded until test plan (docs/test-plan.md) raises real coverage.
-      - name: Build tests with coverage
+      - name: Test with coverage
         run: |
           mkdir -p TestResults
-          dotnet build tests/Intentum.Tests/Intentum.Tests.csproj --no-restore \
-            -p:CollectCoverage=true \
-            -p:CoverletOutput="${{ github.workspace }}/TestResults" \
-            -p:CoverletOutputFormat=opencover
-
-      - name: Test
-        run: |
-          dotnet test tests/Intentum.Tests/Intentum.Tests.csproj --no-build \
+          dotnet test tests/Intentum.Tests/Intentum.Tests.csproj \
+            --no-restore \
             --filter 'FullyQualifiedName!~GreenwashingCaseStudyTests&FullyQualifiedName!~IntegrationTests' \
-            --results-directory TestResults
-          # Ensure coverage is at fixed path for SonarCloud (Coverlet may write under bin or TestResults subdir)
-          if [ ! -f TestResults/coverage.opencover.xml ]; then
-            found=$(find . -name 'coverage.opencover.xml' -type f -print -quit 2>/dev/null)
-            if [ -n "$found" ]; then cp "$found" TestResults/coverage.opencover.xml; fi
+            --results-directory TestResults \
+            /p:CollectCoverage=true \
+            /p:CoverletOutput="${{ github.workspace }}/TestResults" \
+            /p:CoverletOutputFormat=opencover
+      - name: Prepare coverage for SonarCloud
+        run: |
+          mkdir -p TestResults
+          found=$(find . -name 'coverage.opencover.xml' -type f -print -quit 2>/dev/null)
+          if [ -z "$found" ]; then
+            echo "::error::No coverage.opencover.xml found under $(pwd)"
+            find . -name '*.xml' -path '*/TestResults/*' -o -name 'coverage*.xml' 2>/dev/null | head -20
+            exit 1
           fi
-          test -f TestResults/coverage.opencover.xml && echo "Coverage file: $(wc -l < TestResults/coverage.opencover.xml) lines" || (echo "::error::coverage.opencover.xml not found"; exit 1)
-          ls -la TestResults/coverage.opencover.xml
+          cp "$found" TestResults/coverage.opencover.xml
+          echo "Coverage file: $(wc -l < TestResults/coverage.opencover.xml) lines, $(du -h TestResults/coverage.opencover.xml | cut -f1)"
+          head -5 TestResults/coverage.opencover.xml
+          test -s TestResults/coverage.opencover.xml || (echo "::error::coverage.opencover.xml is empty"; exit 1)
+          # Fail if report has no coverage data (SonarCloud would show 0% anyway)
+          grep -q 'sequenceCoverage="[1-9]' TestResults/coverage.opencover.xml || (echo "::error::coverage.opencover.xml has no covered lines"; exit 1)
 
       - name: SonarCloud end
         env:
