--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -2,9 +2,8 @@
 # Exclude samples, examples, docs, tests, benchmarks, scripts from analysis (library src/ is analyzed; coverage from unit tests applies to src/).
 sonar.exclusions=**/samples/**,**/examples/**,**/docs/**,**/templates/**,**/tools/**,**/.github/**,**/tests/**,**/benchmarks/**,**/BenchmarkDotNet.Artifacts/**,**/scripts/**,**/release.sh
 
-# Exclude from coverage metric: CLI/tool, DI/optional adapters, edge code. Temporarily exclude ONNX/Persistence/MultiTenancy/Observability/Analytics until docs/test-plan.md is executed so Quality Gate passes; then remove these and rely on real coverage.
+# Exclude from coverage metric: CLI/tool, DI/optional adapters, edge code. Persistence logic is in scope; only Migrations and adapter packages excluded.
 # CodeGen = console tool; *Extensions = DI registration; Claude/MongoDB/Redis = optional; *RateLimitException = 429 path; LlmIntentModelExtensions = edge.
-sonar.coverage.exclusions=**/Intentum.CodeGen/**,**/*ServiceCollectionExtensions.cs,**/*CachingExtensions.cs,**/MultiTenancyExtensions.cs,**/Intentum.AI.Claude/**,**/Intentum.Persistence.MongoDB/**,**/Intentum.Persistence.Redis/**,**/Intentum.MultiTenancy/**,**/*RateLimitException.cs,**/LlmIntentModelExtensions.cs,**/Intentum.AI.ONNX/**,**/Intentum.Persistence/**,**/Intentum.Observability/**,**/Intentum.Analytics/**
+sonar.coverage.exclusions=**/Intentum.CodeGen/**,**/*ServiceCollectionExtensions.cs,**/*CachingExtensions.cs,**/MultiTenancyExtensions.cs,**/Intentum.AI.Claude/**,**/Intentum.Persistence.MongoDB/**,**/Intentum.Persistence.Redis/**,**/Intentum.MultiTenancy/**,**/*RateLimitException.cs,**/LlmIntentModelExtensions.cs,**/Intentum.AI.ONNX/**,**/Intentum.Persistence/**/Migrations/**,**/Intentum.Observability/**,**/Intentum.Analytics/**
 
-# Stabilize "new code" so it always means "diff vs master". Prevents baseline drift when properties or branch config changes.
-sonar.newCode.referenceBranch=master
+# New code: set in SonarCloud UI (Project Settings → New Code → Definition: Previous version) so baseline is stable across branches/PRs. Do not set referenceBranch here.
