--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,9 +1,2 @@
-# Single source of truth: CI must NOT override these with /d:... so edits here stay stable.
-# Exclude samples, examples, docs, tests, benchmarks, scripts from analysis (library src/ is analyzed; coverage from unit tests applies to src/).
-sonar.exclusions=**/samples/**,**/examples/**,**/docs/**,**/templates/**,**/tools/**,**/.github/**,**/tests/**,**/benchmarks/**,**/BenchmarkDotNet.Artifacts/**,**/scripts/**,**/release.sh
-
-# Exclude from coverage metric: CLI/tool, DI/optional adapters, edge code. Persistence logic is in scope; only Migrations and adapter packages excluded.
-# CodeGen = console tool; *Extensions = DI registration; Claude/MongoDB/Redis = optional; *RateLimitException = 429 path; LlmIntentModelExtensions = edge.
-sonar.coverage.exclusions=**/Intentum.CodeGen/**,**/*ServiceCollectionExtensions.cs,**/*CachingExtensions.cs,**/MultiTenancyExtensions.cs,**/Intentum.AI.Claude/**,**/Intentum.Persistence.MongoDB/**,**/Intentum.Persistence.Redis/**,**/Intentum.MultiTenancy/**,**/*RateLimitException.cs,**/LlmIntentModelExtensions.cs,**/Intentum.AI.ONNX/**,**/Intentum.Persistence/**/Migrations/**,**/Intentum.Observability/**,**/Intentum.Analytics/**
-
-# New code: set in SonarCloud UI (Project Settings → New Code → Definition: Previous version) so baseline is stable across branches/PRs. Do not set referenceBranch here.
+# SonarCloud config (optional). Exclusions and coverage exclusions are passed from CI.
+# Add sonar.exclusions / sonar.coverage.exclusions here when you want to tune what Sonar analyzes; CI can be updated to stop overriding.
