test(onnx): add fixture and coverage for OnnxIntentModel
- Add script to generate minimal ONNX model fixture for tests
- Update CI workflows to generate and copy ONNX fixture before testing
- Include fixture files in test project with copy to output directory
- Implement multiple reflection-based tests to cover private static methods
- Add tests for inference, constructor validation, and various input scenarios
- Add README with instructions for generating test fixture
- Improve test filtering in CI to exclude integration and slow tests
- Update test plan to prioritize coverage improvement for OnnxIntentModel and related files

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,13 @@ jobs:
       - name: Build
         run: dotnet build Intentum.slnx --no-restore
 
+      - name: Generate minimal ONNX fixture
+        run: |
+          pip install onnx --quiet
+          python3 scripts/generate_minimal_onnx.py
+          mkdir -p tests/Intentum.Tests/bin/Debug/net10.0/fixtures
+          cp tests/Intentum.Tests/fixtures/minimal_intent.onnx tests/Intentum.Tests/bin/Debug/net10.0/fixtures/
+
       # Coverage: produced during test run so SonarCloud can associate it with source. Coverlet instruments on build (done by dotnet test) and writes report after tests.
       # Threshold=80; ONNX/Persistence/MultiTenancy/Observability/Analytics excluded until test plan (docs/test-plan.md) raises real coverage.
       - name: Test with coverage
