docs(toc): add Intent Layer five demos to Turkish case studies
- Inserted new entry "Intent Layer five demos" in the Turkish table of contents
- Linked to the new case study file at ../case-studies/intent-layer-five-demos.md

--- a/docs/tr/toc.yml
+++ b/docs/tr/toc.yml
@@ -98,6 +98,8 @@ items:
         href: ../case-studies/cross-llm-consistency.md
       - name: Greenwashing metrikleri
         href: ../case-studies/greenwashing-metrics.md
+      - name: Intent Layer five demos
+        href: ../case-studies/intent-layer-five-demos.md
   - name: API Referansı
     expanded: false
     items:
