chore(docker): update .dockerignore to include necessary README files
- Add exception for README.md to allow inclusion in NuGet pack process
- Include sample project README.md explicitly
- Retain ignoring of .DS_Store and log files for cleaner builds
- Ensure repo root README is recognized as required by Directory.Build.props

--- a/.dockerignore
+++ b/.dockerignore
@@ -21,8 +21,9 @@ templates
 tools
 scripts
 
-# Misc
+# Misc (repo root README required by src/Directory.Build.props for NuGet pack)
 *.md
+!README.md
 !samples/Intentum.Sample.Blazor/README.md
 .DS_Store
 *.log
